bugfix reference text overflow in reps. mode

--- a/style.css
+++ b/style.css
@@ -850,7 +850,7 @@ nav{
 }
 
 .reference_name{
-    font-size: 26px !important;
+    font-size: 26px;
     font-weight: 600;
     color: #F8F5EC;
     margin: 0;
