--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -286,7 +286,12 @@
 
     .text_bubble_container p,
     .text_bubble_container a{
-        padding: 0 21px 0 50px;
+        padding: 0 30px 0 50px;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
     }
     
 }
